--- a/coverpage.html
+++ b/coverpage.html
@@ -41,7 +41,7 @@
 </style>
 
 <div class="cover-main">
-    <span style="font-size:3.25em; font-family:'Segoe UI', SegoeUI, 'Segoe WP', Tahoma, Arial, sans-serif;"><strong>Pyromix</strong></span>
+    <span style="font-size:3.25em; font-family:'Segoe UI', SegoeUI, 'Segoe WP', Tahoma, Arial, sans-serif;"><strong>Pyromics</strong></span>
     <div class="cover-desc">
         <blockquote>
             A high-throughput Py-GC-MS processing tool for deconvolution complex polymeric co-eluted compounds
@@ -50,6 +50,6 @@
     <div class="cover-btns">
         <a href="/quick_start">Quick Start</a>
         <a href="README.md">Home</a>
-        <a href="https://github.com/your-repo">Download Pyromix</a>
+        <a href="https://github.com/your-repo">Download Pyromics</a>
     </div>
 </div>
