--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Pyromix</title>
-    <link rel="icon" type="image/x-icon" href="images/pyromix_2_256.ico">
+    <title>Pyromics</title>
+    <link rel="icon" type="image/x-icon" href="images/pyromics_256.ico">
     <link rel="stylesheet" href="//unpkg.com/docsify/themes/vue.css">
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Pyromix: fast and user-friendly software for processing Py-GC-MS biopolymer samples.">
-    <meta name="keywords" content="Pyromix, Py-GC-MS, Multivariate Curve Resolution, MCR, Lignin, Classification, Python, Chemometrics, Documentation">
+    <meta name="description" content="Pyromics: fast and user-friendly software for processing Py-GC-MS biopolymer samples.">
+    <meta name="keywords" content="Pyromics, Py-GC-MS, Multivariate Curve Resolution, MCR, Lignin, Classification, Python, Chemometrics, Documentation">
     <meta name="author" content="Alex Ilchenko">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Pyromix Documentation">
-    <meta property="og:description" content="Documentation for Pyromix, a software for processing Py-GC-MS biopolymer samples.">
+    <meta property="og:title" content="Pyromics Documentation">
+    <meta property="og:description" content="Documentation for Pyromics, a software for processing Py-GC-MS biopolymer samples.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="images/pyromix_2_256.ico">
+    <meta property="og:image" content="images/pyromics_256.ico">
     <meta name="robots" content="index, follow">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-KZ8DKSW3FZ"></script>
@@ -28,7 +28,7 @@
       .sidebar .app-logo img,
       .app-logo img,
       .sidebar img[alt="logo"],
-      img[alt="Pyromix"] {
+      img[alt="Pyromics"] {
         width: 48px !important;
         height: auto !important;
         max-width: 100% !important;
@@ -41,9 +41,9 @@
     <div id="app"></div>
     <script>
       window.$docsify = {
-        name: 'Pyromix',
+        name: 'Pyromics',
         repo: '',
-        //logo: 'images/pyromix_2_256.ico', // Use your custom logo file
+        //logo: 'images/pyromics_256.ico', // Use your custom logo file
         themeColor: '#493fb5',
         loadSidebar: true,
         loadNavbar: true,
@@ -63,7 +63,7 @@
               return (
                 html +
                 '\n\n----\n\n' +
-                '<a href="https://docsify.js.org" target="_blank" style="color: inherit; font-weight: normal; text-decoration: none;">Powered by docsify. Alex Ilchenko. 2025</a>'
+                '<a href="https://docsify.js.org" target="_blank" style="color: inherit; font-weight: normal; text-decoration: none;">Powered by docsify. Alex Ilchenko. 2026</a>'
               );
             });
           }
@@ -71,7 +71,7 @@
       }
       // Optional: dynamically update the browser tab title
       document.addEventListener('DOMContentLoaded', function() {
-        document.title = 'Pyromix';
+        document.title = 'Pyromics';
       });
     </script>
     <script src="//cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
